--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "name": "com.kasaifudo.dynamicpanels",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "displayName": "Dynamic Panels System",
   "description": "A flexible Unity system for building dynamic, data-driven UI panels.",
   "unity": "2021.3",
+  "dependencies": {
+    "com.unity.textmeshpro": "2.0.0"
+  },
   "author": {
     "name": "Your Name",
     "url": "https://github.com/KasaiFudo"
