--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "com.unity.textmeshpro": "2.0.0"
   },
   "author": {
-    "name": "Your Name",
+    "name": "KasaiFudo",
     "url": "https://github.com/KasaiFudo"
   },
   "samples": [
