--- a/Editor/DynamicPanels.Editor.asmdef
+++ b/Editor/DynamicPanels.Editor.asmdef
@@ -4,7 +4,9 @@
     "references": [
         "GUID:56e66047343f2ad439b2455c6fd37e98"
     ],
-    "includePlatforms": [],
+    "includePlatforms": [
+        "Editor"
+    ],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": false,
